  - Vessels in attack mood who have no target slow down
    to cruising speed so they can hear better.

  - Added escort mission.

  - When an escorted ship is sunk the mission fails.

  - Fixed bug which prevented all sounds from showing up on
    sonar display.

  - We should now be able to make missions where a vessel's
    goal is to stay alive for N seconds.

  - Sound signals should show up brighter on sonar display.

  - Added new recon mission.

  - AI subs should not "randomly" move to surface during
    patrol.

  - Vessel depth changes a little faster now, even at
    slow speeds. Simplified depth change calculation.

  - When traveling in reverse the sub should rise/fall in
    the proper direction.

  - AI subs should change depth sometimes.

  - Fixed bug which would prevent AI from shooting at
    near targets.

  - AI vessels should shoot at different ranges depending
    on their mood and a little randomness.

  - Enemy surface ships now detect radar signals and
    investigate.

  - Pinging at escorts in a convoy will cause the escorts to
    examine the pinging vessel.

  - AI now notices pinging and will move to investigate.

  - Added keys for moving to periscope depth and surfacing.
    X and S respectively.

  - Radar now gives us the location, but not a firm
    contact on surface vessels. Prevents "cheating'
    when on recon missions.

  - Ship type is now included in target information.

  - Added new carrier class ships.

  - AI vessels in ATTACK mood should now chase after the
    origin of torpedoes.

  - Reduced thermal dampening of sound from 25% to 15%

  - Player should be informed if they have been hit.

  - Updated English PDF manual.

  - Added makefile target "tarball" for creating source packages.

  - Stack object is now a linked list, not an array. Allows for
    more ships/subs/sonar data.

============ openssn-0.8 released September 18, 2011 ==========

  - Display text feedback when changing depth or holding depth.
