@@ -19,8 +19,8 @@ The follwing example shows us two ships. The first is a friendly submarine
 traveling at 5 knots at 47 feet, due east. The second entry is a surface
 ship (merchant class) traveling at 15 knotes south-west.
 
-0 1 1 5.0 47 90 150000 150000 75.0 1
-1 4 3 15.0 0 230 140000 170000 115.0 1 Passive
+0 1 1 5 47 90 150000 150000 75.0 1
+1 4 3 15 0 230 140000 170000 115.0 1 Passive
 
 
 
