@@ -1,0 +1,15 @@
+0 10 1 5 50 0 150000 140000 75.0
+0 10 1 5 150 90 160000 150000 75.0 Attack
+0 10 1 5 150 270 130000 150000 75.0 Attack
+1 3 0 15 0 0 152000 160000 75.0 Convoy
+1 3 0 15 0 0 152000 150000 75.0 Convoy
+1 3 0 15 0 0 148000 160000 75.0 Convoy
+1 3 0 15 0 0 148000 150000 75.0 Convoy
+1 4 0 15 0 0 152000 154000 75.0 Convoy
+1 4 0 15 0 0 150000 154000 75.0 Convoy
+1 4 0 15 0 0 148000 156000 75.0 Convoy
+1 4 0 15 0 0 150000 152000 75.0 Convoy
+1 4 3 15 0 0 150000 160000 75.0 Convoy
+1 4 3 15 0 0 150000 158000 75.0 Convoy
+1 4 3 15 0 0 148000 154000 75.0 Convoy
+1 4 3 15 0 0 152000 156000 75.0 Convoy
